Short CC reference

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,7 +59,7 @@
     {% endif %}
 
     {% if page.creative_commons %}
-      <p><i>{{ page.title }}</i> is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
+      <p><i>{{ page.title }}</i> is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">Creative Commons</a>.</p>
     {% endif %}
 
   </footer>
