--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 $baseline: 12px;
 
 body {
-  font: #{$baseline}/#{2 * $baseline} Monaco;
+  font: #{$baseline}/#{2 * $baseline} Georgia, serif;
   text-align: center; // make positioning easier
 }
 
@@ -52,12 +52,12 @@ pre { // code
     width: 0; // don't show vertical scrollbar
     height: 8px;
   }
-
+ 
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
   }
-
+ 
   &::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
