Font change to Whitney ssm

--- a/_sass/_headings.scss
+++ b/_sass/_headings.scss
@@ -6,7 +6,7 @@
   line-height: 2em / $font-size;
   font: {
     size: $font-size;
-    family: Merriweather, serif;
+    family: Whitney SSm A, Whitney SSm B, sans-serif;;
     weight: bold;
   }
 }
