--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 $baseline: 12px;
 
 body {
-  font: #{$baseline}/#{2 * $baseline} Whitney SSm A, sans-serif;;
+  font: #{$baseline}/#{2 * $baseline} Helvetica, sans-serif;;
   text-align: center; // make positioning easier
 }
 
