--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <header>
-  <h1>Curtis McEnroe</h1>
+  <h1>Nauman Ahmad</h1>
 
   <nav>
     <ul>
