--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   padding: 0 40px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Monaco";
 }
 
 .container {
@@ -12,7 +12,7 @@ body {
 }
 
 p {
-  font-size: 18px;
+  font-size: 15px;
   line-height: 28px;
 }
 
